[gd_scene load_steps=2 format=3 uid="uid://dm0q1uh086kwt"]

[ext_resource type="Script" path="res://levels/PauseMenu.gd" id="1_o8lbc"]

[node name="PauseLayer" type="CanvasLayer" node_paths=PackedStringArray("focusChild")]
process_mode = 2
script = ExtResource("1_o8lbc")
focusChild = NodePath("PauseMenu/VBoxContainer/ContinueButton")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_vertical_guides_ = [1152.0, 576.0]

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.109804, 0.415686)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 391.0
offset_top = 276.0
offset_right = -383.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CONTINUE"

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="ReturnMenu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RETURN MENU"

[connection signal="pressed" from="PauseMenu/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ReturnMenu" to="." method="_on_return_menu_pressed"]
